# paa-paradigms

./: CMakeLists.txt  FileHelper.cpp  FileHelper.h  Makefile  Makefile_BruteForce  Makefile_Dynamic  Makefile_Greedy  README.md  greedy.cpp
Assassins Greed.xcodeproj/: project.pbxproj
Assassins Greed.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Assassins Greed.xcodeproj/project.xcworkspace/xcuserdata/jordansilva.xcuserdatad/: UserInterfaceState.xcuserstate
Assassins Greed.xcodeproj/xcuserdata/jordansilva.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Assassins Greed.xcodeproj/xcuserdata/jordansilva.xcuserdatad/xcschemes/: assassins greed.xcscheme  xcschememanagement.plist
assassins greed/: bruteforce.cpp  main.cpp
assassins greed/data/: foes.txt
assassins greed/src/algorithms/: BruteForce.cpp  BruteForce.hpp  CMakeLists.txt  Dynamic.cpp  Greedy.cpp
assassins greed/src/domain/: Level.cpp
assassins greed/src/helper/: CMakeLists.txt  Settings.cpp
data/: levels.txt
entrega/Brute Force/: Makefile  compile_fb.sh  execute_fb.sh
entrega/Brute Force/src/algorithms/: BruteForce.cpp  BruteForce.hpp
entrega/Dynamic/: Makefile  dynamic.cpp  execute_pd.sh  levels.txt
entrega/Dynamic/src/algorithms/: Dynamic.cpp  Dynamic.hpp
entrega/Dynamic/src/domain/: Level.hpp
entrega/Greedy/: Makefile  execute_ag.sh
entrega/Greedy/src/algorithms/: Greedy.cpp  Greedy.hpp
entrega/Greedy/src/helper/: Settings.hpp
src/: CMakeLists.txt
src/algorithms/: Dynamic.hpp  Greedy.hpp
src/domain/: CMakeLists.txt  Level.hpp
